# webos-initscripts

./: CMakeLists.txt
files/systemd/services/common/: luna-sysmgr.service
files/systemd/targets/: default-webos.target  webos-bd.target  webos-cbd.target  webos-dis.target  webos-ibd.target  webos-mbd.target  webos-rbd.target
src/initctl/: InitCtl.cpp
